# terraform-dms-module

./: .checkov.yml  .gitignore  .pre-commit-config.yaml  .terraform-docs.yaml  .terraform.lock.hcl  .yamllint  DB_SETUP.md  README.md  alerts.tf  checkov.yml  data.tf  data_buckets.tf  default_task_settings.json  endpoints.tf  engine_config.tf  go.mod  iam-roles.tf  import.tf  independent_replication_task.tf  kms.tf  lakeformation.tf  locals.tf  metadata_generator.tf  outputs.tf  pyproject.toml  replication_instance.tf  replication_task.tf  secrets.tf  terraform.tf  validation.tf  validation_queue.tf  variables.tf
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cflite_pr.yml  code-scanning.yml  codeql.yml  dependency-review.yml  documentation.yml  go-terratest.yml  lambda-tests.yml  pre-commit.yml  scorecards.yml  security.yml  terraform-static-analysis.yml
examples/example-readme/: .terraform.lock.hcl  main.tf  mappings.json
examples/example-readme-postgres/: main.tf  mappings.json
examples/oracle-rds-source/: .gitignore  .terraform.lock.hcl  README.md  lambda_sql_runner.tf  network.tf  oracle-rds.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
examples/postgres-rds-source/: .gitignore  .terraform.lock.hcl  README.md  data.tf  lambda_sql_runner.tf  network.tf  outputs.tf  postgres-rds.tf  terraform.tfvars  variables.tf  versions.tf
lambda-functions/validation/: main.py
lambda_functions/: test_lambda_functions.py
scripts/: generate_terratest_examples.sh
test/: go.mod  go.sum  terraform_dms_module_test.go  terraform_root_module_test.go
(+8 files in other folders)
